// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LargeCardList /> shapshots should not throw if items is undefined 1`] = `
<div
  className="cardList"
  style={
    Object {
      "background": "#B4BCC2",
    }
  }
>
  
</div>
`;

exports[`<LargeCardList /> shapshots should render only the necessary items 1`] = `
<div
  className="cardList"
  style={
    Object {
      "background": "#B4BCC2",
    }
  }
>
  <react-virtualized-list
    height={618}
    rowCount={1000}
    rowHeight={NaN}
    rowRenderer={[Function]}
    width={1024}
  >
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
    <div
      className="row"
      dir="ltr"
      style={Object {}}
    />
  </react-virtualized-list>
</div>
`;

exports[`<LargeCardList /> shapshots should render the empty content if no items 1`] = `
<div
  className="cardList"
  style={
    Object {
      "background": "#B4BCC2",
    }
  }
>
  I am empty
</div>
`;
